Set correct pipeline config directory

--- a/server/configs/application.properties
+++ b/server/configs/application.properties
@@ -61,7 +61,7 @@ context.encryptionKey=@@encryptionKey@@
 
 #context.oldEncryptionKey=
 #context.requiredModules=
-context.pipelineConfig=./config
+context.pipelineConfig=@@pathToServer@@/build/deploy/embedded/config
 #context.serverGUID=
 #context.bypass2FA=false
 #context.workDirLocation=/path/to/desired/workDir
