--- a/server/configs/application.properties
+++ b/server/configs/application.properties
@@ -5,7 +5,7 @@ server.port=@@serverPort@@
 #server.ssl.enabled=true
 #server.ssl.enabled-protocols=TLSv1.3,TLSv1.2,TLSv1.1
 #server.ssl.key-alias=my_selfsigned
-#server.ssl.key-store=${user.home}/localhost.keystore
+#server.ssl.key-store=/opt/teamcity-agent/localhost.keystore
 #server.ssl.key-store-password=changeit
 # Typically either PKCS12 or JKS
 #server.ssl.key-store-type=PKCS12
