--- a/server/configs/application.properties
+++ b/server/configs/application.properties
@@ -4,12 +4,13 @@ server.port=@@serverPort@@
 
 #server.ssl.enabled=true
 #server.ssl.enabled-protocols=TLSv1.3,TLSv1.2,TLSv1.1
-#server.ssl.key-alias=my_selfsigned
-#server.ssl.key-store=/path/to/key-store-file
-#server.ssl.key-store-password=pwd
+#server.ssl.protocol=TLS
+#server.ssl.key-alias=tomcat
+#server.ssl.key-store=@@keyStore@@
+#server.ssl.key-store-password=@@keyStorePassword@@
 # Typically either PKCS12 or JKS
 #server.ssl.key-store-type=PKCS12
-#server.ssl.ciphers=ciphers
+#server.ssl.ciphers=HIGH:!ADH:!EXP:!SSLv2:!SSLv3:!MEDIUM:!LOW:!NULL:!aNULL
 
 # HTTP-only port for servers that need to handle both HTTPS (configure via server.port and server.ssl above) and HTTP
 #context.httpPort=8080
@@ -34,14 +35,6 @@ context.resources.jdbc.labkeyDataSource.validationQuery=SELECT 1
 #context.resources.jdbc.@@extraJdbcDataSource@@.url=@@extraJdbcUrl@@
 #context.resources.jdbc.@@extraJdbcDataSource@@.username=@@extraJdbcUsername@@
 #context.resources.jdbc.@@extraJdbcDataSource@@.password=@@extraJdbcPassword@@
-
-# Retain legacy syntax until automated tests are updated to configure via the 'context.resources.jdbc.' prefix
-#context.dataSourceName[1]=jdbc/@@extraJdbcDataSource@@
-#context.driverClassName[1]=@@extraJdbcDriverClassName@@
-#context.url[1]=@@extraJdbcUrl@@
-#context.username[1]=@@extraJdbcUsername@@
-#context.password[1]=@@extraJdbcPassword@@
-
 
 #useLocalBuild#context.webAppLocation=@@pathToServer@@/build/deploy/labkeyWebapp
 context.encryptionKey=@@encryptionKey@@
@@ -103,17 +96,15 @@ mail.smtpUser=@@smtpUser@@
 # HTTP session timeout for users - defaults to 30 minutes
 #server.servlet.session.timeout=30m
 
-## Make management endpoints accessible with LabKey at ROOT context path
-server.servlet.context-path=/actuator
-management.endpoints.web.base-path=/
+
 #Enable shutdown endpoint
 management.endpoint.shutdown.enabled=true
 # turn off other endpoints
 management.endpoints.enabled-by-default=false
 # allow access via http
 management.endpoints.web.exposure.include=*
-# Use a separate port for the actuator
-#management.server.port=8081
+# Use a separate port for management endpoints. Required if LabKey is using default (ROOT) context path
+management.server.port=@@shutdownPort@@
 
 # Don't show the Spring banner on startup
 spring.main.banner-mode=off
@@ -171,20 +162,20 @@ spring.main.banner-mode=off
 #    report-uri  https://www.labkey.org/admin-contentsecuritypolicyreport.api?${CSP.REPORT.PARAMS} ;
 
 # Default CSP for TeamCity and dev deployments
-#setupTask#csp.report=\
-#setupTask#    default-src 'self' https: http: ;\
-#setupTask#    connect-src 'self' localhost:* ws: ${LABKEY.ALLOWED.CONNECTIONS} ;\
-#setupTask#    object-src 'none' ;\
-#setupTask#    style-src 'self' https: 'unsafe-inline' ;\
-#setupTask#    img-src 'self' https: data: ;\
-#setupTask#    font-src 'self' http: https: data: ;\
-#setupTask#    script-src 'unsafe-eval' 'strict-dynamic' 'nonce-${REQUEST.SCRIPT.NONCE}' ;\
-#setupTask#    base-uri 'self' ;\
-#setupTask#    frame-ancestors 'self' ;\
-#setupTask#    report-uri /admin-contentsecuritypolicyreport.api?${CSP.REPORT.PARAMS} ;
+csp.report=\
+    default-src 'self' https: http: ;\
+    connect-src 'self' localhost:* ws: ${LABKEY.ALLOWED.CONNECTIONS} ;\
+    object-src 'none' ;\
+    style-src 'self' https: 'unsafe-inline' ;\
+    img-src 'self' https: data: ;\
+    font-src 'self' http: https: data: ;\
+    script-src 'unsafe-eval' 'strict-dynamic' 'nonce-${REQUEST.SCRIPT.NONCE}' ;\
+    base-uri 'self' ;\
+    frame-ancestors 'self' ;\
+    report-uri /admin-contentsecuritypolicyreport.api?${CSP.REPORT.PARAMS} ;
 
 # Use a non-temp directory for tomcat
-#setupTask#server.tomcat.basedir=@@pathToServer@@/build/deploy/embedded
+server.tomcat.basedir=.
 
 # Enable tomcat access log
 server.tomcat.accesslog.enabled=true
