--- a/server/configs/application.properties
+++ b/server/configs/application.properties
@@ -56,7 +56,7 @@ context.encryptionKey=@@encryptionKey@@
 #context.requiredModules=
 #context.pipelineConfig=/path/to/pipeline/config/dir
 #context.serverGUID=
-#context.bypass2FA=false
+#context.bypass2FA=true
 #context.workDirLocation=/path/to/desired/workDir
 
 mail.smtpHost=@@smtpHost@@
@@ -108,6 +108,7 @@ management.server.port=@@shutdownPort@@
 
 # Don't show the Spring banner on startup
 spring.main.banner-mode=off
+#logging.config=path/to/alternative/log4j2.xml
 
 # Optional - JMS configuration for remote ActiveMQ message management for distributed pipeline jobs
 # https://www.labkey.org/Documentation/wiki-page.view?name=jmsQueue
