--- a/server/embedded/build.gradle
+++ b/server/embedded/build.gradle
@@ -27,10 +27,17 @@ configurations {
     embedded
 }
 
+configurations.configureEach {
+//    exclude group: 'org.springframework.boot', module: 'spring-boot-starter-logging'
+    exclude group: 'ch.qos.logback', module: 'logback-classic'
+    exclude group: 'org.apache.logging.log4j', module: 'log4j-to-slf4j'
+}
+
 dependencies {
     implementation "org.springframework.boot:spring-boot-starter-web:${springBootVersion}"
     implementation "org.springframework.boot:spring-boot-starter-actuator:${springBootVersion}"
     implementation "org.springframework.boot:spring-boot-starter-validation:${springBootVersion}"
+//    implementation "org.springframework.boot:spring-boot-starter-log4j2:${springBootVersion}"
 
     // Force to the latest Tomcat version until Spring Boot 2.7.17 is released and we can adopt it
     implementation('org.apache.tomcat.embed:tomcat-embed-core') {
@@ -63,6 +70,8 @@ dependencies {
     runtimeOnly group: "com.sun.mail", name: "jakarta.mail", version: "${javaMailVersion}"
     runtimeOnly group: "org.apache.tomcat", name: "tomcat-dbcp", version: "${springBootTomcatVersion}"
     runtimeOnly "org.postgresql:postgresql:${postgresqlDriverVersion}"
+    runtimeOnly "org.apache.logging.log4j:log4j-slf4j2-impl:${log4j2Version}"
+    implementation "org.apache.logging.log4j:log4j-core:${log4j2Version}"
 
     developmentOnly("org.springframework.boot:spring-boot-devtools")
 }
