--- a/gradle.properties
+++ b/gradle.properties
@@ -244,7 +244,7 @@ mysqlDriverVersion=8.3.0
 
 # forced compatibility between docker and UserReg-
 # update version in modules/UserReg-WS/gradle.properties as well
-nettyVersion=4.1.107
+nettyVersion=4.1.107.Final
 
 objenesisVersion=1.0
 
