--- a/gradle.properties
+++ b/gradle.properties
@@ -22,10 +22,10 @@ org.gradle.jvmargs=-Xmx2048m -XX:+UseParallelGC
 versionConflictAction=delete
 
 # uncomment the following line for running the application with embedded tomcat
-useEmbeddedTomcat
+#useEmbeddedTomcat
 
 # uncomment the following line when using a local build of a server with embedded tomcat
-useLocalBuild
+#useLocalBuild
 
 # uncomment the following line when using SSL for your embedded tomcat server
 #useSsl
@@ -323,5 +323,3 @@ xmlApisVersion=1.0.b2
 
 # sync with Tika/POI
 xmlbeansVersion=5.2.0
-
-npmInstallCommand=install
