--- a/gradle.properties
+++ b/gradle.properties
@@ -174,6 +174,8 @@ gsonVersion=2.8.9
 grpcVersion=1.61.1
 
 guavaVersion=33.0.0-jre
+
+# Note: You won't find usages in the product sources; this property is used by the gradle plugin.
 gwtVersion=2.11.0
 gwtServletJakartaVersion=2.11.0
 # For dev builds, the targeted, single permutation browser. Can be either gwt-user-firefox, gwt-user-chrome, or gwt-user-ie
@@ -204,9 +206,9 @@ javassistVersion=3.20.0-GA
 javaMailVersion=2.0.1
 javaxAnnotationVersion=1.3.2
 
-# No longer part of Java 10. Dependency for many modules.
-jaxbApiVersion=2.3.1
-jaxbVersion=2.3.3
+# Dependency for many modules
+jaxbApiVersion=4.0.1
+jaxbVersion=4.0.4
 
 jaxrpcVersion=1.1
 
