--- a/server/configs/application.properties
+++ b/server/configs/application.properties
@@ -61,7 +61,7 @@ mail.smtpUser=@@smtpUser@@
 
 #useLocalBuild#spring.devtools.restart.additional-paths=@@pathToServer@@/build/deploy/modules,@@pathToServer@@/build/deploy/embedded/config
 
-# HTTP session timeout for users - defaults to 30 minutes
+## HTTP session timeout for users - defaults to 30 minutes
 #server.servlet.session.timeout=30m
 
 ## Enable shutdown endpoint
